@@ -8,6 +8,7 @@ cvc4-1.8
 e-2.6-1
 easychair-3.5
 flatlaf-2.4
+foiltex-2.1.4b
 idea-icons-20210508
 isabelle_fonts-20211004
 isabelle_setup-20221028
