@@ -20,6 +20,7 @@ Isabelle Reference Manuals!
 
 Demo Documents
   demo_easychair  Demo for Easychair style
+  demo_foiltex    Demo for FoilTeX: slides in LaTeX
   demo_lipics     Demo for Dagstuhl LIPIcs style
 
 Old Isabelle Manuals
